<resources>
    <string name="app_name" translatable="false">Toolbox</string>

    <!-- Buttons Actions -->
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>

    <!-- Fragments -->
    <string name="item_stopwatch">Stopwatch</string>
    <string name="item_calculator">Calculator</string>
    <string name="item_notepad">Notepad</string>
    <string name="item_rng">Random Number</string>
    <string name="item_timer">Timer</string>

    <!-- Views Strings -->
    <string name="title">Title</string>
    <string name="content">Content…</string>
    <string name="new_note_fab">New Note</string>
    <string name="timer_name">Timer name…</string>
    <string name="loading">Loading…</string>
    <string name="no_notes_found">No notes found.</string>
    <string name="write_your_notes_here">Write your notes here…</string>
    <string name="unnamed">Unnamed</string>

    <!-- Toast Strings -->
    <string name="timer_set">Timer set.</string>
    <string name="timer_canceled">Timer canceled.</string>
    <string name="note_saved">Note saved.</string>

    <!-- Notification Strings -->
    <string name="stopwatch_running">Stopwatch running.</string>
    <string name="timer_running">Timer running.</string>
    <string name="time">Time:</string>
    <string name="time_left">Time left: </string>

    <!-- Alert Dialog Strings -->
    <string name="invalid_name">Invalid name!</string>
    <string name="invalid_name_desc">Title is invalid or already used. Please choose a different title. Hint: Titles can\'t contain the following characters: </string>
    <string name="time_is_up">Time\'s UP!</string>
    <string name="timer">"Timer: "</string>
    <string name="ended">ended.</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_note_desc">Are you sure you want to delete this note?</string>
    <string name="add_a_timer">Add a timer</string>
    <string name="timers_running">" timer(s) are running."</string>
    <string name="share">Share</string>
    <string name="share_this_note">Share this note</string>
    <string name="save">save</string>
    <string name="show_milliseconds_on_stopwatch">Show milliseconds on stopwatch.</string>
    <string name="settings_udpated">Settings udpated</string>
    <string name="stop_all">Stop all</string>
    <string name="start_stopwatch">Start Stopwatch</string>
    <string name="not_available">This is not available right now.</string>
    <string name="settings">Settings</string>
    <string name="toolbox_settings">Toolbox Settings</string>
    <string name="untitled_note">Untitled_Note</string>
    <string name="button_background_color">Button background color:</string>
    <string name="choose_button_background">Choose button background</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="exit_for_sure">Are you sure you want to exit without saving the note?</string>
    <string name="about_toolbox">About Toolbox</string>
    <string name="app_version">App version: </string>
    <string name="developer_info">Developed by Jason Tantaros</string>
    <string name="contact_info">Contact: iasonas.tan@gmail.com</string>
    <string name="developer_name">" Jason Tantaros\nAll rights reserved."</string>
    <string name="borders">Borders:</string>
    <string name="enable_borders">Enable Borders</string>
    <string name="round_corners">Round Corners</string>
    <string name="choose_color">Choose color</string>
    <string name="battery_warning" translatable="false">The app works even without permissions, but when battery or memory is stressed, the Android system may kill some services.
    \n\nThis means timers/stopwatch may stop unexpectedly.\n\nYou can allow background activity by going to App Info then Battery and selecting Unrestricted.\n\n</string>
    <string name="permission_helps" translatable="false">Permissions makes app better</string>
    <string name="never_ask_again" translatable="false">Never ask again</string>
    <string name="lets_do_it" translatable="false">Let\'s do it</string>
    <string name="remind_me_later" translatable="false">Remind me later</string>
    <string name="greet_will_happen_again_on" translatable="false">"Greet will happen again on "</string>
    <string name="limit">Limit:</string>
    <string name="done">Done</string>
    <string name="open">Open</string>
    <string name="rng_limit">Rng limit:</string>
    <string name="widgets">Widgets:</string>
    <string name="could_not_save_note">Could not save note</string>
    <string name="status_about_running_timers">Status about running timers.</string>

</resources>