<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.app.toolbox.view.AnimatedButton
            android:layout_weight="1"
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/back" />

        <com.app.toolbox.view.AnimatedButton
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:id="@+id/share_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/share" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
    </LinearLayout>

    <EditText
        android:id="@+id/title_view"
        android:autofillHints="title for the note"
        android:hint="@string/title"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/main_edittext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:inputType="textMultiLine|textCapSentences"
        android:overScrollMode="ifContentScrolls"
        android:padding="4dp"
        android:scrollHorizontally="false"
        android:singleLine="false"
        android:textSize="16sp"
        android:hint="@string/write_your_notes_here"
        android:importantForAutofill="no"
        android:imeOptions="flagNoEnterAction"
        android:background="@drawable/no_background_no_round_border" />

</LinearLayout>