<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <com.app.toolbox.view.TimeInput
        android:id="@+id/time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:title="@string/time"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="190dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="190dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:autofillHints="timer x"
            android:hint="@string/timer_name"
            android:layout_marginVertical="10dp"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.app.toolbox.view.AnimatedButton
        android:id="@+id/start_timer_button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:layout_gravity="center"
        android:text="@string/start"
        android:textSize="18sp"
        android:background="@drawable/background_with_border"
        android:textStyle="bold" />

</LinearLayout>