<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:background="@drawable/widget_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="00:00:00"
        android:fontFamily="@font/poppins_bold"
        android:textSize="50sp"
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="HardcodedText" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_margin="5dp"
            android:id="@+id/start_button"
            android:text="@string/start"
            android:textSize="20sp"
            android:fontFamily="@font/zalando_sans_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_margin="5dp"
            android:id="@+id/stop_button"
            android:textSize="20sp"
            android:text="@string/stop"
            android:fontFamily="@font/zalando_sans_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:id="@+id/reset_button"
            android:fontFamily="@font/zalando_sans_bold"
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>