<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageButton
        android:layout_alignParentEnd="true"
        android:id="@+id/stopwatch_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/settings"
        android:background="@android:color/transparent"
        android:contentDescription="settings button"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:fontFamily="@font/poppins_semibold"
            android:id="@+id/time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="50sp"
            android:textStyle="bold"
            android:text="00:00:00.00"
            tools:ignore="HardcodedText" />

        <com.app.toolbox.view.AnimatedButton
            android:id="@+id/start_button"
            android:minWidth="150dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="2dp"
            app:highlighted="false"
            android:text="@string/start"
            android:textSize="18sp"
            android:background="@drawable/background_with_border"
            android:textStyle="bold" />

        <com.app.toolbox.view.AnimatedButton
            android:id="@+id/reset_button"
            android:layout_margin="2dp"
            android:minWidth="150dp"
            android:layout_width="wrap_content"
            android:background="@drawable/background_with_border"
            android:layout_height="60dp"
            android:text="@string/reset"
            app:highlighted="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <com.app.toolbox.view.AnimatedButton
            android:id="@+id/stop_button"
            android:minWidth="150dp"
            android:layout_width="wrap_content"
            android:layout_margin="2dp"
            android:layout_height="60dp"
            android:background="@drawable/background_with_border"
            android:text="@string/pause"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>